better trees; random forest

--- a/dataimporterfromsaves.ipynb
+++ b/dataimporterfromsaves.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -123,7 +123,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "members_for_trees.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -184,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -284,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -360,12 +369,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
+    "members['minrxday']=0\n",
+    "members['maxrxday']=0\n",
+    "members['minmedicalday']=0\n",
+    "members['maxmedicalday']=0\n",
+    "\n",
     "dummy = rxdata.groupby('PATID')['DAYS_FROM_DIAG'].min()\n",
     "for k in range(len(dummy)):\n",
     "    members.at[dummy.index[k], 'minrxday'] = dummy.iat[k]\n",
@@ -382,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -401,7 +415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -420,7 +434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -560,21 +574,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
-    "try: \n",
-    "    members['lasttimerxnodoctor']=np.absolute(members['maxrxday']-members['maxmedicalday'])\n",
-    "    members['firsttimerxnodoctor']=np.absolute(members['minmedicalday']-members['minrxday'])\n",
-    "except TypeError:\n",
-    "    pass"
+    "members['lasttimerxnodoctor']=np.absolute(members['maxrxday']-members['maxmedicalday'])\n",
+    "members['firsttimerxnodoctor']=np.absolute(members['minmedicalday']-members['minrxday'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "medical_wanted['STD_COST']=medical_wanted['STD_COST'].apply(pd.to_numeric)\n",
@@ -626,15 +641,6 @@
     "members['dailyrxcost'] = members['rxcost'] / (members['prediag_days'] + members['postdiag_days'])\n",
     "members['dailytotalcost'] = members['totalcost'] / (members['prediag_days'] + members['postdiag_days'])"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -822,7 +828,33 @@
    },
    "outputs": [],
    "source": [
-    "members_for_trees = members_for_work"
+    "members_for_trees = members_for_work\n",
+    "#members_for_trees = members_for_trees.fillna(0) #bad data science\n",
+    "members_for_trees = members_for_trees.replace([np.inf, -np.inf], 0) #such bad data science"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "members_for_trees.applymap(np.isreal).all(0).all(0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "index = 39129\n",
+    "k=0\n",
+    "while k < len(members_for_trees.columns):\n",
+    "    print k, type(members_for_trees.iloc[index,k])\n",
+    "    k += 1"
    ]
   },
   {
@@ -843,19 +875,58 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "#Make True/False variable for our trees\n",
-    "members_for_trees_expensive = members_for_trees[members_for_trees['targetcost']>=12500]\n",
-    "members_for_trees_expensive['expensive']=True\n",
-    "members_for_trees_inexpensive = members_for_trees[members_for_trees['targetcost']<12500]\n",
-    "members_for_trees_inexpensive['expensive']=False\n",
-    "members_for_trees = members_for_trees_expensive.append(members_for_trees_inexpensive)\n",
-    "\n",
-    "members_for_trees_vexpensive = members_for_trees[members_for_trees['targetcost']>=100000]"
+    "#make bins for trees\n",
+    "#Divide members into 5 bins with equal cost\n",
+    "members_for_trees_sorted=members_for_trees.sort_values('targetcost',ascending=False)\n",
+    "members_for_trees_sorted['cum_targetcost']=members_for_trees_sorted['targetcost'].expanding(1).sum() #compute the cumulative cost\n",
+    "cost_per_bin=members_for_trees_sorted.targetcost.sum()/5 #compute total cost divided by desired number of bins\n",
+    "bins = [-1, cost_per_bin, 2*cost_per_bin, 3*cost_per_bin, 4*cost_per_bin, 5*cost_per_bin+21687.46] #create bin edges\n",
+    "quintiles=[5,4,3,2,1] #'name' the bins\n",
+    "members_for_trees_sorted['quintile']=pd.cut(members_for_trees_sorted['cum_targetcost'],bins,right=False) #create the bins\n",
+    "members_for_trees_sorted['quintile_id'] = pd.cut(members_for_trees_sorted['cum_targetcost'], bins, labels=quintiles)\n",
+    "print members_for_trees_sorted.groupby('quintile_id')['targetcost'].sum() #check that we have approximately equal cost in each bin\n",
+    "dummy = members_for_trees_sorted.groupby('quintile_id') #check that we have approximately equal cost in each bin\n",
+    "for k in range(5):\n",
+    "    print len(dummy.get_group(k+1).index)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Try making equaly sized bins:\n",
+    "members_for_trees_sorted=members_for_trees.sort_values('targetcost',ascending=False)\n",
+    "quintiles=[5,4,3,2,1] #'name' the bins\n",
+    "bins= [-21686-1, 840, 2462, 5530, 12683, 1287371.29]\n",
+    "members_for_trees_sorted['quintile']=pd.cut(members_for_trees_sorted['targetcost'],bins,right=False) #create the bins\n",
+    "members_for_trees_sorted['quintile_id'] = pd.cut(members_for_trees_sorted['targetcost'], bins, labels=quintiles)\n",
+    "dummy = members_for_trees_sorted.groupby('quintile_id') #check that we have approximately equal cost in each bin\n",
+    "for k in range(5):\n",
+    "    print len(dummy.get_group(k+1).index)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "members_for_trees['targetcost'].quantile([0, .25, .5, .7, .85, 1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "members_for_trees_sorted=members_for_trees_sorted.drop('quintile', axis = 1)\n",
+    "#members_for_trees_sorted=members_for_trees_sorted.drop('cum_targetcost', axis=1)"
    ]
   },
   {
@@ -864,56 +935,139 @@
    "metadata": {
     "collapsed": true
    },
+   "outputs": [],
+   "source": [
+    "#Make True/False variable for our trees (from old code)\n",
+    "\n",
+    "#members_for_trees_expensive = members_for_trees[members_for_trees['targetcost']>=12500]\n",
+    "#members_for_trees_expensive['expensive']=True\n",
+    "#members_for_trees_inexpensive = members_for_trees[members_for_trees['targetcost']<12500]\n",
+    "#members_for_trees_inexpensive['expensive']=False\n",
+    "#members_for_trees = members_for_trees_expensive.append(members_for_trees_inexpensive)\n",
+    "\n",
+    "#members_for_trees_vexpensive = members_for_trees[members_for_trees['targetcost']>=100000]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "#More stuff from old: \n",
+    "\n",
+    "#Make a little dataframe that's half expensive, half not, choosing a random collection on inexpensive each time\n",
+    "#percentage = float(len(members_for_trees_vexpensive))/len(members_for_trees_inexpensive)\n",
+    "#msk = np.random.rand(len(members_for_trees_inexpensive)) < percentage\n",
+    "#members_for_small_trees = members_for_trees_expensive.append(members_for_trees_inexpensive[msk])\n",
+    "\n",
+    "#print len(members_for_trees_inexpensive[msk])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.tree import DecisionTreeClassifier\n",
     "\n",
-    "#Make a little dataframe that's half expensive, half not, choosing a random collection on inexpensive each time\n",
-    "percentage = float(len(members_for_trees_vexpensive))/len(members_for_trees_inexpensive)\n",
-    "msk = np.random.rand(len(members_for_trees_inexpensive)) < percentage\n",
-    "members_for_small_trees = members_for_trees_expensive.append(members_for_trees_inexpensive[msk])\n",
-    "\n",
-    "print len(members_for_trees_inexpensive[msk])\n",
     "#Now choose a random subset of that for training/testing\n",
-    "msk = np.random.rand(len(members_for_small_trees)) < 0.8\n",
-    "members_small_train = members_for_small_trees[msk]\n",
-    "members_small_test = members_for_small_trees[~msk]\n",
+    "msk = np.random.rand(len(members_for_trees_sorted)) < 0.8\n",
+    "members_small_train = members_for_trees_sorted[msk]\n",
+    "members_small_test = members_for_trees_sorted[~msk]\n",
     "\n",
     "#Take away the answers\n",
-    "y_train = members_small_train['expensive']\n",
-    "y_test = members_small_test['expensive']\n",
-    "x_train = members_small_train.drop('expensive', axis = 1)\n",
+    "y_train = members_small_train['quintile_id']\n",
+    "y_test = members_small_test['quintile_id']\n",
+    "x_train = members_small_train.drop('quintile_id', axis = 1)\n",
     "msk = np.random.rand(len(members_for_trees)) < 0.8\n",
     "\n",
     "x_train = x_train.drop('targetcost', axis = 1)\n",
-    "x_test = members_small_test.drop('expensive', axis = 1)\n",
+    "x_test = members_small_test.drop('quintile_id', axis = 1)\n",
     "x_test = x_test.drop('targetcost', axis = 1)\n",
     "\n",
     "#Make the tree\n",
-    "dt = DecisionTreeClassifier(min_samples_split=200)\n",
+    "dt = DecisionTreeClassifier(min_samples_split=500)\n",
     "dt.fit(x_train, y_train)\n",
     "\n",
     "#Add predictions to original stuff\n",
     "pred = list(dt.predict(x_test))\n",
-    "members_small_test['pred']=pred\n",
     "#hell if I know how to make a confusion matrix\n",
-    "check=members_small_test[['targetcost','expensive', 'pred']].sort_values('targetcost', ascending = 0)\n",
-    "check_truetrue = check[check['expensive'] & check['pred']]\n",
-    "check_true = check[check['expensive']]\n",
-    "check_predtrue = check[check['pred']]\n",
+    "#check=members_small_test[['targetcost','quintile', 'pred']].sort_values('targetcost', ascending = 0)\n",
+    "#check_truetrue = check[check['expensive'] & check['pred']]\n",
+    "#check_true = check[check['expensive']]\n",
+    "#check_predtrue = check[check['pred']]\n",
     "#check_falsefalse = check[(not check['expensive']) & (not check['pred'])]\n",
     "#check_falseneg = check[(check['expensive']) & (not check['pred'])]\n",
     "#check_falsepos = check[(not check['expensive']) & (check['pred'])]\n",
-    "print float(len(check_truetrue))/len(check_true)\n",
-    "print float(len(check_truetrue))/len(check_predtrue)"
+    "#print float(len(check_truetrue))/len(check_true)\n",
+    "#print float(len(check_truetrue))/len(check_predtrue)\n",
+    "from sklearn.metrics import confusion_matrix\n",
+    "matrix = confusion_matrix(y_test, pred)\n",
+    "print \"percentage of high cost patients predicted as such is\", float(matrix[4][4])/matrix[4].sum()\n",
+    "otherhalf = 0\n",
+    "k=0\n",
+    "while k < 5:\n",
+    "    otherhalf+=matrix[k,4]\n",
+    "    k+=1\n",
+    "print \"percentage of predicted high cost patients that are high cost is\", float(matrix[4][4])/otherhalf"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "matrix"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "clf = RandomForestClassifier(n_jobs=500)\n",
+    "clf.fit(x_train, y_train)\n",
+    "pred = list(clf.predict(x_test))\n",
+    "matrix = confusion_matrix(y_test, pred)\n",
+    "\n",
+    "print \"percentage of high cost patients predicted as such is\", float(matrix[4][4])/matrix[4].sum()\n",
+    "otherhalf = 0\n",
+    "k=0\n",
+    "while k < 5:\n",
+    "    otherhalf+=matrix[k,4]\n",
+    "    k+=1\n",
+    "print \"percentage of predicted high cost patients that are high cost is\", float(matrix[4][4])/otherhalf"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "len(y_test)*.153"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x_train.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "#All the same stuff, but with the full data.  Run as is to test your tree from above on the full data. (SPOILER ALERT: it sucks)\n",
@@ -938,15 +1092,21 @@
     "pred = list(dt.predict(x_test))\n",
     "members_test['pred']=pred\n",
     "#hell if I know how to make a confusion matrix\n",
-    "check=members_test[['targetcost','expensive', 'pred']].sort_values('targetcost', ascending = 0)\n",
-    "check_truetrue = check[check['expensive'] & check['pred']]\n",
-    "check_true = check[check['expensive']]\n",
-    "check_predtrue = check[check['pred']]\n",
+    "\n",
     "#check_falsefalse = check[(not check['expensive']) & (not check['pred'])]\n",
     "#check_falseneg = check[(check['expensive']) & (not check['pred'])]\n",
     "#check_falsepos = check[(not check['expensive']) & (check['pred'])]\n",
     "print float(len(check_truetrue))/len(check_true)\n",
     "print float(len(check_truetrue))/len(check_predtrue)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "members_for_trees.to_csv('members.csv')"
    ]
   },
   {
@@ -976,12 +1136,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "output"
+    "6000.0/39133"
    ]
   },
   {
@@ -1021,9 +1179,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#It generates some cool stuff like so:\n",
@@ -1033,14 +1189,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#Crossvalidation for variable importance for trees on little sets.\n",
     "\n",
-    "importances = [0 for k in range(71)]\n",
+    "importances = [0 for k in range(98)]\n",
     "k=0\n",
     "while k < 100:\n",
     "    percentage = float(len(members_for_trees_expensive))/len(members_for_trees_inexpensive)\n",
@@ -1068,15 +1222,22 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#happy counting\n",
     "\n",
     "x_train.columns "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
